--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ wee_alloc = { version = "0.4.5", optional = true }
 js-sys = "0.3.55"
 web-sys = { version = "0.3.4", features = [ "console", "Headers", "Request", "RequestInit", "RequestCredentials", "RequestMode", "Response", "Window" ]}
 uuid = { version = "0.8.2", features = [ "v4", "wasm-bindgen" ]}
+bincode = "1.3.3"
+serde = "1.0.136"
 
 aes-gcm-siv = "0.10.1"
 argon2 = "0.3"
@@ -34,6 +36,7 @@ features = [ "js" ]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
+futures-util = "0.3.7"
 
 [profile.release]
 opt-level = "s"
