--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "key-x-wasm"
-version = "0.1.0"
+repository = "https://github.com/pixelcities/key-x-wasm.git"
+version = "0.1.1"
 authors = ["PixelCities"]
 edition = "2018"
 
