--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "key-x-wasm"
 repository = "https://github.com/pixelcities/key-x-wasm.git"
-version = "0.1.4"
+version = "0.1.5"
 authors = ["PixelCities"]
 edition = "2018"
 
@@ -21,7 +21,8 @@ js-sys = "0.3.55"
 web-sys = { version = "0.3.4", features = [ "console", "Headers", "Request", "RequestInit", "RequestCredentials", "RequestMode", "Response", "Window", "HtmlDocument" ]}
 uuid = { version = "0.8.2", features = [ "v4", "wasm-bindgen" ]}
 bincode = "1.3.3"
-serde = "1.0.136"
+serde = { version = "1.0.136", features = ["derive"] }
+serde-wasm-bindgen = "0.4"
 
 aes-gcm-siv = "0.10.1"
 argon2 = "0.3"
