--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "key-x-wasm"
 repository = "https://github.com/pixelcities/key-x-wasm.git"
-version = "0.1.9"
+version = "0.1.10"
 authors = ["PixelCities"]
 edition = "2018"
 
@@ -22,6 +22,7 @@ web-sys = { version = "0.3.4", features = [ "console", "Headers", "Request", "Re
 uuid = { version = "0.8.2", features = [ "v4", "wasm-bindgen" ]}
 bincode = "1.3.3"
 serde = { version = "1.0.136", features = ["derive"] }
+serde_json = { version = "1.0.81", default-features = false, features = ["alloc"]}
 serde-wasm-bindgen = "0.4"
 
 aes-gcm-siv = "0.10.1"
