--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://npm.pkg.github.com'
       - name: Build
-        run: API_BASEPATH=$API_BASEPATH wasm-pack build --scope pixelcities
+        run: API_BASEPATH=$API_BASEPATH make build
         env:
           API_BASEPATH: ${{ env.API_BASEPATH }}
       - name: Publish package
